--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@types/react": "^18.0.33",
+    "autoprefixer": "^10.4.14",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
@@ -17,6 +19,8 @@
     "typescript": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "18.15.11"
+    "@tailwindcss/custom-forms": "^0.2.1",
+    "@types/node": "18.15.11",
+    "tailwindcss": "^3.3.1"
   }
 }
