--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "autoprefixer": "^10.4.14",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
+    "mysql2": "^3.2.3",
     "next": "latest",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
+    "sequelize": "^6.31.0",
+    "sequelize-cli": "^6.6.0",
+    "swr": "^2.1.3",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
