--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "mysql2": "^3.2.3",
-    "next": "latest",
+    "next": "13.3.1",
+    "next-connect": "1.0.0-next.3",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +24,7 @@
     "typescript": "^5.0.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@tailwindcss/custom-forms": "^0.2.1",
     "@types/node": "18.15.11",
     "tailwindcss": "^3.3.1"
