--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/react": "^18.0.33",
     "autoprefixer": "^10.4.14",
+    "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "mysql2": "^3.2.3",
@@ -20,8 +21,10 @@
     "remark-html": "^15.0.2",
     "sequelize": "^6.31.0",
     "sequelize-cli": "^6.6.0",
+    "slug": "^8.2.2",
     "swr": "^2.1.3",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
