--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "@types/react": "^18.0.33",
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
+    "connect-redis": "^7.0.1",
     "date-fns": "^2.29.3",
+    "express-session": "^1.17.3",
     "gray-matter": "^4.0.3",
     "mysql2": "^3.2.3",
     "next": "13.3.1",
     "next-connect": "1.0.0-next.3",
+    "next-session": "^4.0.5",
+    "passport": "0.5",
+    "passport-local": "^1.0.0",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.6",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "sequelize": "^6.31.0",
