--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-redis": "^7.0.1",
     "date-fns": "^2.29.3",
     "express-session": "^1.17.3",
+    "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
     "mysql2": "^3.2.3",
     "next": "13.3.1",
@@ -30,7 +31,8 @@
     "slug": "^8.2.2",
     "swr": "^2.1.3",
     "typescript": "^5.0.3",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
