--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/react": "^18.0.33",
     "autoprefixer": "^10.4.14",
+    "awilix": "^8.0.1",
     "bcrypt": "^5.1.0",
     "connect-redis": "^7.0.1",
     "date-fns": "^2.29.3",
