--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "redis": "^4.6.6",
+    "reflect-metadata": "^0.1.13",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "sequelize": "^6.31.0",
