--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "@types/react": "^18.0.33",
+    "ajv": "^8.12.0",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
     "autoprefixer": "^10.4.14",
     "awilix": "^8.0.1",
     "bcrypt": "^5.1.0",
