--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "mysql2": "^3.2.3",
     "next": "13.3.1",
     "next-connect": "1.0.0-next.3",
+    "next-redux-wrapper": "^8.1.0",
     "next-session": "^4.0.5",
     "passport": "0.5",
     "passport-local": "^1.0.0",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "redis": "^4.6.6",
+    "redux": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
