--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "^18.0.33",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
@@ -31,6 +32,7 @@
     "react-redux": "^8.0.5",
     "redis": "^4.6.6",
     "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "reflect-metadata": "^0.1.13",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
